httpbin/vs-ns1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin2
  namespace: ns1 
spec:
  hosts:
  - "httpbin2.example.com"
  gateways:
  - default/httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /delay
    route:
    - destination:
        port:
          number: 8000
        host: httpbin.default.svc.cluster.local
